@@ -1,5 +1,8 @@
 2008-06-04  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>
 
+	With these changes, ejabberd 2.0.x can run without modifications with
+	the exmpp compat layer.
+
 	* src/core/exmpp_xmlstream.erl: Add support for old xmlstreamstart
 	tuple. The format to use can be chosen by calling the new start/3
 	function. Be careful, the old format is selected by default now,
@@ -13,6 +16,8 @@
 	* src/compat/xml_stream.erl, src/Emakefile.in, src/Makefile.am,
 	ebin/Makefile.am, ebin/exmpp.app.in, doc/Makefile.am: Add xml_stream
 	to the compat layer.
+
+	* src/core/exmpp_xmlstream.erl: A few style changes.
 
 2008-06-03  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>
 
